Lib/test/test_curses.py
@@ -269,16 +269,17 @@ def main(stdscr):
     finally:
         curses.resetty()
 
-if __name__ == '__main__':
-    curses.wrapper(main)
-    unit_tests()
-else:
+def test_main():
     # testing setupterm() inside initscr/endwin
     # causes terminal breakage
-    curses.setupterm(fd=sys.__stdout__.fileno())
+    curses.setupterm(fd=sys.stdout.fileno())
     try:
         stdscr = curses.initscr()
         main(stdscr)
     finally:
         curses.endwin()
+    unit_tests()
+
+if __name__ == '__main__':
+    curses.wrapper(main)
     unit_tests()
